# moment_clone

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
.jules/: sentinel.md
alembic/: env.py
alembic/versions/: 0001_baseline.py  0002_add_onboarding_done_to_user.py  0003_add_pending_gcs_path_to_session.py  0004_add_webhook_event_table.py  0005_enable_rls_all_tables.py  0006_move_vector_extension_to_extensions_schema.py  a008668ec8e0_drop_session_number_check_constraint.py
backend/: main.py
backend/core/: auth.py  database.py  security.py  settings.py
backend/models/: __init__.py  chat.py  cooking_principles.py  dish.py  learner_state.py  session.py  user.py  user_dish_progress.py  webhook_event.py
backend/routers/: auth.py  chat.py  dishes.py  sessions.py
backend/scripts/: seed_dishes.py  seed_knowledge_base.py
backend/services/: gcs.py  inngest_client.py
backend/tests/: conftest.py  test_auth.py  test_chat.py  test_chat_performance.py  test_cors_config.py  test_dishes.py  (+8 more)
docs/: ai_feasibility.md  architecture.md  design.md  principal_engineers_analysis.md  product.md  research.md  review_article.txt
frontend/: .gitignore  README.md  clerk_e2e.mjs  clerk_login.mjs  middleware.ts  next.config.ts  package.json  playwright.config.ts  upload_session.mjs  upload_test.mjs  vitest.config.ts  vitest.setup.ts
knowledge_base/: acid_balance.md  heat_management.md  ingest.py  maillard_reaction.md  moisture_control.md  pasta_cooking.md  temperature_control.md
pipeline/: functions.py  utils.py
(+49 files in other folders)
